--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ body{
 h1{
     text-transform: uppercase;
     font-size: 6em;
+    letter-spacing: 0.05em;
 }
 
 h2{
@@ -34,8 +35,10 @@ h2{
 }
 
 #button:hover{
-    -webkit-animation: vibrate-1 0.3s linear infinite both;
-            animation: vibrate-1 0.3s linear infinite both;
+    -webkit-animation: vibrate-1 0.5s linear infinite both;
+    animation: vibrate-1 0.5s linear infinite both;
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
 }
 
 input[type=number]{
@@ -86,6 +89,7 @@ input[type=number]{
   0% {
     -webkit-transform: translate(0);
             transform: translate(0);
+            background-position: 0% 50%;
   }
   20% {
     -webkit-transform: translate(-2px, 2px);
@@ -94,6 +98,7 @@ input[type=number]{
   40% {
     -webkit-transform: translate(-2px, -2px);
             transform: translate(-2px, -2px);
+            background-position: 100% 50%;
   }
   60% {
     -webkit-transform: translate(2px, 2px);
@@ -106,5 +111,6 @@ input[type=number]{
   100% {
     -webkit-transform: translate(0);
             transform: translate(0);
+            background-position: 0% 50%;
   }
 }
