--- a/styles.css
+++ b/styles.css
@@ -2,26 +2,36 @@
 
 body{
     font-family: League Gothic, Arial, Helvetica, sans-serif;
-    background-color: gold;
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
 }
 
 .content{
     text-align: center;
     width: 70%;
     margin: auto;
-    background-color: white;
+    margin-top: 5%;
+    background-color: rgb(20, 20, 20);
     border: black solid 3px;
     border-radius: 10px;
 }
 
 h1{
+    color: white;
     text-transform: uppercase;
     font-size: 6em;
     letter-spacing: 0.05em;
 }
 
 h2{
+    color: white;
     font-size: 3em;
+}
+
+h3{
+    color: white;
+    font-size: 2.5em;
 }
 
 #button{
@@ -113,4 +123,16 @@ input[type=number]{
             transform: translate(0);
             background-position: 0% 50%;
   }
+}
+
+@keyframes gradient {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
