--- a/styles.css
+++ b/styles.css
@@ -17,20 +17,25 @@ body{
     border-radius: 10px;
 }
 
-h1{
+h1, h2, h3{
     color: white;
+}
+
+h2, h3{
+    letter-spacing: 0.05em;
+}
+
+h1{
     text-transform: uppercase;
     font-size: 6em;
     letter-spacing: 0.05em;
 }
 
 h2{
-    color: white;
     font-size: 3em;
 }
 
 h3{
-    color: white;
     font-size: 2.5em;
 }
 
@@ -61,6 +66,14 @@ input[type=number]{
     border: black solid 3px;
     border-radius: 5px;
     margin: 0.1em;
+}
+
+#winner{
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 5px;
+    width: 300px;
+    text-align: center;
+    margin: auto;
 }
 
 /* ----------------------------------------------
